<resources>
    <string name="app_name">La Naranjita</string>
    <string name="title_home">Vista principal</string>
    <string name="title_credit_card">Tarjeta de crédito</string>
    <string name="title_notifications">Notificaciones </string>
    <string name="all">TODO</string>
    <string name="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio quas illo eaque maiores reprehenderit, molestiae aliquid reiciendis natus.</string>
    <string name="subtitle">Lorem ipsum dolor sit consectur.</string>


    <!-- Log In -->
    <string name="bienvenida">Welcome Back!</string>
    <string name="bienvenida_secondary">We are glad to see you back</string>
    <string name="email">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="olvide_password">Olvide mi contraseña</string>
    <string name="start_session">Log In</string>
    <string name="text_nuevo_user">Don´t have an account?</string>
    <string name="nuevo_user"><u>Sign Up</u></string>

    <!-- Account -->
    <string name="create_account">Create new account</string>
    <string name="account">Enter the fields below to get started</string>
    <string name="name">Full Name</string>
    <string name="number">Phone Number</string>
    <string name="create">Sign Up</string>
    <string name="text_log_in">Alredy have an account?</string>
    <string name="log_in"><u>Sign In</u></string>

    <!-- Home -->
    <string name="buenos">Buenos Días!</string>
    <string name="search_hint">¿Qué se te antoja hoy?</string>
    <string name="categories">Categorias</string>
    <string name="pasteles">Pasteles</string>
    <string name="postres">Postres</string>
    <string name="sanguche">Sanguches</string>
    <string name="tartas">Tartas</string>
    <string name="empanadas">Empanadas</string>
    <string name="offer">Weekly Offer</string>
    <string name="Top">Top Sellers</string>

    <!-- Profile -->
    <string name="perfil">Profile</string>
    <string name="username">Username</string>
    <string name="edit">Edit profile</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="language">Language</string>
    <string name="faqs">FAQs</string>
    <string name="give">Give us rate</string>
    <string name="log_out">Log out</string>

    <!-- carrito -->
    <string name="carrito">Carrito</string>
    <string name="title">Titulo</string>
    <string name="description_p">Descripcion del Producto</string>
    <string name="amount">Costo</string>
    <string name="sub">Subtotal</string>
    <string name="tf">Impuestos</string>
    <string name="delivery">Delivery</string>
    <string name="total">Total</string>

</resources>