<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/perfil"
                android:fontFamily="@font/raleway_bold"
                android:textColor="@color/black_700"
                android:textSize="24sp"
                android:gravity="center|center_horizontal"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>
    </LinearLayout>

    <!-- Agrega la imagen redonda con texto debajo -->
    <LinearLayout
        android:id="@+id/profileLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center">

            <ImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/naranjita_logo"
                android:layout_gravity="center"
                android:scaleType="centerCrop"/>

        </LinearLayout>

        <TextView
            android:id="@+id/profileText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:fontFamily="@font/raleway_bold"
            android:textColor="@android:color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profileLayout"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/edit"/>

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/settings"/>

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/history"/>

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/language"/>

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/faqs"/>

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:text="@string/give"/>

        <Button
            android:layout_width="350dp"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/log_out"/>
    </LinearLayout>
</RelativeLayout>
