<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/principal">

    <LinearLayout
        android:id="@+id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="240dp">

            <ImageView
                android:layout_width="300dp"
                android:layout_height="128dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="55dp"
                android:src="@drawable/naranjita_logo"/>

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/linearParte2"
        android:layout_below="@id/linearParte1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_bold"
            android:textSize="20sp"
            android:textColor="@color/search"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/create_account"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:textSize="18sp"
            android:textStyle="bold"
            android:gravity="center|center_horizontal"
            android:text="@string/account"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearParte2"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputUsuario"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/name"
            app:startIconDrawable="@drawable/ic_user"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtUser"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/raleway_regular"
                android:inputType="textPersonName"
                android:textSize="15sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/email"
            app:startIconDrawable="@drawable/ic_email"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtMail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/raleway_regular"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputNumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/number"
            app:startIconDrawable="@drawable/ic_phone"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtNumber"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/raleway_regular"
                android:inputType="phone"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtInputPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:hint="@string/password"
            app:startIconDrawable="@drawable/ic_lock"
            android:background="@drawable/rounded_background"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:fontFamily="@font/raleway_regular"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearParte4"
        android:layout_below="@id/linearParte3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnIniciarSesion"
            android:layout_width="300dp"
            android:layout_height="48dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:background="@drawable/rounded_button"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearParte5"
        android:layout_below="@id/linearParte4"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txtLogeo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway_regular"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/button"
            android:gravity="center|center_horizontal"
            android:text="@string/log_in"/>

    </LinearLayout>

</RelativeLayout>